--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 	<form action="https://formsubmit.co/3746420@itfam.edu.do" method="POST">
+		<div>
+		<h2>escribe tu mensaje</h2>
+		<p>introducir:</p>
+		<p>nombre, usuario, mensaje</p>
+	    </div>
      <textarea name="hi"></textarea>
      <button type="submit">Send</button>
 </form>
